fix: cambio medición en el style spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -365,7 +365,7 @@ footer {
 
 .navbar-nav .nav-link {
     color: #F2F5F6 !important;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     margin-left: 1rem;
 }
 
